feature(backend): added additional year fabrication to the entity Vehicle, also modified the DTO's